# python-project-52

./: .codeclimate.yml  .flake8  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  user.json
.github/workflows/: run_tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_status_status_name.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_executor_task_status.py  0003_task_labels.py  0004_remove_task_labels_task_labels.py
task_manager/templates/: form.html  hello_card.html  index.html  layout.html  login.html  navigation.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses.html
task_manager/templates/tasks/: task_card.html  task_create.html  task_delete.html  task_update.html  tasks.html
task_manager/templates/users/: user_form.html  (+4 more)
task_manager/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
tests/: __init__.py  test_auth.py  tests_app.py  tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
tests/fixtures/: data.json  db.json  test_user.json
(+7 files in other folders)
